# python-pip-template

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  setup.py
src/app/: main.py
src/app/conf/: config.py
